<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (created at 8/25/22, 6:43 PM)
  ~ AmirBahador, Amiri
  ~ bahadoramiri.report@gmail.com
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/msg_dialog_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/themeActionBarColor"
    android:minHeight="100dp"
    app:cardCornerRadius="@dimen/standard_8dp"
    tools:targetApi="lollipop">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/msg_dialog_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_16dp"
            android:layout_marginTop="@dimen/standard_16dp"
            android:layout_marginEnd="@dimen/standard_16dp"
            android:background="@android:color/transparent"
            android:minHeight="@dimen/standard_40dp"
            android:textStyle="bold"
            tools:hint="@string/app_name" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/msg_dialog_textView"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/standard_16dp"
            android:layout_marginBottom="@dimen/standard_16dp"
            android:background="@android:color/transparent"
            android:text="@string/apply"
            android:textColor="@color/themeAccentColor" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dismiss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/msg_dialog_textView"
            android:layout_marginEnd="@dimen/standard_8dp"
            android:layout_marginBottom="@dimen/standard_16dp"
            android:layout_toLeftOf="@id/apply"
            android:background="@android:color/transparent"
            android:text="@string/dismiss"
            android:textColor="@color/themeAccentColor" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>