<?xml version="1.0" encoding="utf-8"?><!--
  ~  Copyright (c) 2022
  ~  Coded by Bahador Amiri ** JotaByte **
  ~  at 7/21/22, 2:27 PM
  ~  email : abadan918@gmail.com
  -->

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/msg_dialog_cardview"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:backgroundTint="@color/themeActionBarColor"
    app:cardCornerRadius="@dimen/standard_8dp"
    tools:targetApi="lollipop">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/msg_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/standard_16dp"
            android:layout_marginTop="@dimen/standard_16dp"
            android:layout_marginEnd="@dimen/standard_16dp"
            android:layout_marginBottom="@dimen/standard_16dp"
            android:gravity="center_vertical|right"
            android:textStyle="bold"
            tools:text="@string/title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/msg_dialog_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/apply"
            android:layout_below="@id/msg_dialog_title"
            android:layout_marginStart="@dimen/standard_16dp"
            android:layout_marginEnd="@dimen/standard_16dp"
            android:background="@android:color/transparent"
            android:minHeight="@dimen/standard_40dp"
            tools:hint="@string/app_name" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/apply"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="@dimen/standard_16dp"
            android:layout_marginBottom="@dimen/standard_16dp"
            android:textColor="@color/themeAccentColor"
            android:text="@string/apply" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/dismiss"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="@dimen/standard_8dp"
            android:layout_marginBottom="@dimen/standard_16dp"
            android:textColor="@color/themeAccentColor"
            android:layout_toLeftOf="@id/apply"
            android:text="@string/dismiss" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>